--- a/1/index.html
+++ b/1/index.html
@@ -159,11 +159,8 @@
     <div id="results" class="content-section">
       <h2 class="section-title">Bells and Whistles</h2>
       <p>Interesting add-ons to this project include the use of FFT and IFFT to compute cross correlations. This greatly enhances speed allowing for the naive fft approach to be comparable in speed to the standard pyramid approach. Automatic cropping was also experimented with. The technique uses saturation to detect which parts of the image to remove.Saturation of only clor is remove based ona fixed threshold. Unfortunately this cut out a lot of the image often and worked best only for the Emir. </p>
-      <div class="gallery"></div>
-        <div class="gallery-item"></div>
-          <img src="assets/CROPPED_Colorized_emir.tif.jpg" alt="Image 13">
-        <div class="caption">Cropped Emir</div>
-      </div>
+        <div class="big-img"></div>
+        <div class="text">Cropped Emir</div>
     </div>
     </div>
 
