--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <a href="./1/index.html">Project 1</a>
     <a href="./2/index.html">Project 2</a>
     <a href="./3/index.html">Project 3</a>
+    <a href="./4a/index.html">Project 4a</a>
 </body>
 </html>
 
