--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <a href="./3/index.html">Project 3</a>
     <a href="./4/index.html">Project 4</a>
     <a href="./5/index.html">Project 5</a>
+    <a href="./Final/index.html">Final</a>
 </body>
 </html>
 
